--- a/Remember_individuals.slim
+++ b/Remember_individuals.slim
@@ -1,5 +1,5 @@
 // This file will be the start of my simulation - I first have a big WF starting population (10'000 individuals)
-//Then a bottleneck kicks in after 100'000 generations and sets the populations ize to 16 individuals. --> I chose this, because after 100'000 the population will be at equilibrium (10*n)
+//Then a bottleneck kicks in after 100'000 generations and sets the population size to 16 individuals (real scenario) or 1000 individuals (as a comparison) --> I chose this, because after 100'000 generations the population will be at equilibrium (10*n)
 // I want to store those 16 individuals, such that i do not have to run this part over and over again. 
 
 // things to add, but not sure how and if necessary: treeSeqRememberIndividuals() and also simplify = T 
@@ -32,20 +32,11 @@ initialize() {
 
 
 100000 early() {  
-		p1.setSubpopulationSize(16);
+		p1.setSubpopulationSize(1000);
 }
 
 100001 late() {
-		sim.treeSeqOutput("final_output.trees");
+		sim.treeSeqOutput("1000_1e-7_output.trees");
 		sim.simulationFinished();
 }
 
-
-//10 early() {  
-//		p1.setSubpopulationSize(16);
-//		}
-//		
-//11 late(){
-//		sim.treeSeqOutput("test_output.trees");
-//		sim.simulationFinished();
-//		}
