--- a/Read_file.slim
+++ b/Read_file.slim
@@ -44,7 +44,7 @@ mateChoice() {
 
 
 100001 early() {
-	sim.readFromPopulationFile("1000_1e-7_output.trees");
+	sim.readFromPopulationFile("final_output.trees");
 	// p1 now exists, restored from file
    catn("Restored population size: " + size(p1.individuals));
  	//p1.setSubpopulationSize(1000);
