sexes are saved
I was able to save the sexes during the filtering of my .tree file ikn python. But somehow the relatedness values are not kept during the process. This will be the next thing to try out.

--- a/MODEL 2/model2.slim
+++ b/MODEL 2/model2.slim
@@ -100,7 +100,12 @@ initialize() {
 
 100036 late() {
 
-	sim.treeSeqOutput("model2.trees");
+// Remember all individuals so that their metadata is saved in the tree sequence:
+//sim.treeSeqOutput("model2.trees", simplify=F);
+sim.treeSeqOutput("model2.trees");
+
+
+
 	sim.simulationFinished();
 		
 		}
