--- a/Read_file_model2.slim
+++ b/Read_file_model2.slim
@@ -1,18 +1,21 @@
 initialize() {
-	initializeSLiMModelType("WF"); // means that population size can not change dynamically -> WF model
-	//turning on pedigree tracking, as relatedness
-	initializeSLiMOptions(keepPedigrees = T); // Track ancestry
-	initializeMutationRate(1e-5); //defining mutation rate
-	initializeMutationType("m1", 0.5, "f", 0.0); //mutation type m1 is has dominance coefficient 0.5 and is neutral (fitness 0.0)
-	initializeGenomicElementType("g1", m1, 1.0); //genomic element type g1 is initialized with mutation type m1 and base mutation rate
-	initializeGenomicElement(g1, 0, 99999); //g1 has length 10'000 bases, maybe change -> second genomic element?
-	initializeRecombinationRate(1e-7); // specifies recombination rate
-	
-    initializeTreeSeq();
 
+	initializeSLiMOptions(keepPedigrees = T); //Ensables the program to keep track of the ancestry
+	initializeMutationRate(1e-7); //define a mutation rate - based on values for the common kingfisher. 
+	//here i call my mutations as m0, because of the filtering i did with python. Somehow m0 was used as placeholder for m1. 
+	initializeMutationType("m0", 0.5, "f", 0.0); //mutation type m1 is has dominance coefficient 0.5 and is neutral (fitness 0.0)
+	initializeGenomicElementType("g0", m0, 1.0); //genomic element type g1 is initialized with mutation type m1 and base mutation rate
+	initializeGenomicElement(g0, 0, 99999); //g1 has length 10'000 bases
+	initializeRecombinationRate(1e-7); // define the recombination rate
 	initializeSex("A"); //creates males and females in the population
 
-	//defineConstant("K_p1", 1000); //carrying capacity for p1
+    initializeTreeSeq(); //this command enables me to read in the safed (output from earlier simulation) population
+    
+//    defineConstant("K_p1", 140); //carrying capacity for p1
+    
+// 	defineConstant("reps", repetition); //This helps me to run the model multiple times with a code block in R.
+    
+    
 }
 //
 //mateChoice() {
@@ -44,7 +47,7 @@ initialize() {
 
 
 100037 early() {
-	sim.readFromPopulationFile("model2_filteredinds.trees");
+	sim.readFromPopulationFile("model2_filteredinds_withsex.trees");
 	// p1 now exists, restored from file
    catn("Restored population size: " + size(p1.individuals));
  	//p1.setSubpopulationSize(1000);
