--- a/MODEL 2/model2.slim
+++ b/MODEL 2/model2.slim
@@ -54,6 +54,8 @@ initialize() {
 	}	
 	p1.setSubpopulationSize(newSize);
 	cat("Population size =" + size(p1.individuals) +  "\n");
+	// remember everyone every generation
+  //sim.treeSeqRememberIndividuals(p1.individuals);
 
 }
 
