model1 with 1000 generations + new model 2
I did model  with 1000 generations + created a new, simpler model 2 which only uses slim...

--- a/MODEL 1/model1_nonrandom_related.slim
+++ b/MODEL 1/model1_nonrandom_related.slim
@@ -36,45 +36,36 @@ mateChoice() {
 		//Take first individual from that list as mate
 		bestMate = shuffledInds[0];
 
-		males = males[males != bestMate]; //removes bestMate from the list, so that all males only get to pair once
+//		males = males[males != bestMate]; //removes bestMate from the list, so that all males only get to pair once
 		return bestMate;
 	}
    
-		return NULL;  // No valid mate found
+//		return NULL;  // No valid mate found
 }
 
 100001 early() {
 	sim.readFromPopulationFile("final_output.trees"); // p1 now exists, restored from file
    catn("Restored population size: " + size(p1.individuals)); //prints out the number of individuals I have...
 	defineConstant("simID", "_seed =" + getSeed()); // creates a variable that contains the seed of the run, to make it repeatable... This will be visible in the output file!
-	log = community.createLogFile("sim_log_nonrandom_related_" + "reps_" + reps + simID  + ".csv", logInterval=2); //This creates my file - the name of the file contains the name of the model, the current repetition and the seed of the current simulation, i do this for every second generation (logInterval)
+	log = community.createLogFile("sim_log_nonrandom_related_" + "reps_" + reps + simID  + ".csv", logInterval=5); //This creates my file - the name of the file contains the name of the model, the current repetition and the seed of the current simulation, i do this for every second generation (logInterval)
 //	log = community.createLogFile("sim_log_nonrandom_notrelated" + ".csv", logInterval=10);
 	log.addCycle(); //This adds the generations to my file
 	log.addCustomColumn("Heterozygosity", "calcHeterozygosity(p1.genomes);"); //here i create a column in my file to later save the generated values of heterozygosity
 }
 
-100001:100100 early() {
+100001:101000 early() {
 	newSize = asInteger(p1.individualCount * 1.1); //increas popsize every generation by the factor 1.1 with a carrying capacity of "newSize"
 	if (newSize >= 1000) 
 	{
 			newSize = 1000;
 	}	
 	p1.setSubpopulationSize(newSize); //Population cannot get bigger than "newSize"
-	cat("Population size =" + size(p1.individuals) +  "\n");
+	//cat("Population size =" + size(p1.individuals) +  "\n");
 	
 	heterozygosity = calcHeterozygosity(p1.genomes);
-	cat("Mean heterozygosity = " + heterozygosity + "\n"); //Here i fill in the heterozygosity values over the different generations	
+	//cat("Mean heterozygosity = " + heterozygosity + "\n"); //Here i fill in the heterozygosity values over the different generations	
 	
 }
 
-//100050 late() {
-//// Print mean heterozygosity across the population in each generation
-//	heterozygosity = calcHeterozygosity(p1.genomes);
-//	cat("Mean heterozygosity = " + heterozygosity + "\n"); //Here i fill in the heterozygosity values over the different generations
-////	sim.output(sim.mutationsOfType(m1),"slim_output_" + "reps_" + reps +"_"+ simID  + ".csv");
-//
-//}
-//
 
-//Take care - i now changed generation time, as well as the amount of outputs!
-
+//I now changed log interval and simulation time (before 2 and 100100) and put the cat commands in comments...
