--- a/MODEL 1/model1_random.slim
+++ b/MODEL 1/model1_random.slim
@@ -33,11 +33,11 @@ mateChoice() {
 		//Take first individual from that list as mate
 		bestMate = shuffledInds[0];
 
-		males = males[males != bestMate]; //removes bestMate from the list, so that all males only get to pair once
+//		males = males[males != bestMate]; //removes bestMate from the list, so that all males only get to pair once
 		return bestMate;
 	}
    
-		return NULL;  // No valid mate found
+//		return NULL;  // No valid mate found
 }
 
 
@@ -46,13 +46,13 @@ mateChoice() {
 	sim.readFromPopulationFile("final_output.trees"); // p1 now exists, restored from file
    catn("Restored population size: " + size(p1.individuals)); //prints out the number of individuals I have...
 	defineConstant("simID", "_seed =" + getSeed()); // create a variable that contains the seed of the run, to make it repeatable... This will be visible in the output file!
-	log = community.createLogFile("sim_log_random_" + "reps_" + reps + simID  + ".csv", logInterval=2); //This creates my file - the name of the file contains the name of the model, the current repetition and the seed of the current simulation, i do this for every second generation (logInterval)
+	log = community.createLogFile("sim_log_random_" + "reps_" + reps + simID  + ".csv", logInterval=5); //This creates my file - the name of the file contains the name of the model, the current repetition and the seed of the current simulation, i do this for every second generation (logInterval)
 //	log = community.createLogFile("sim_log_nonrandom_notrelated" + ".csv", logInterval=10);
 	log.addCycle(); //adds the generations to my file
 	log.addCustomColumn("Heterozygosity", "calcHeterozygosity(p1.genomes);"); //here i create a column in my file to later save the generated values of heterozygosity
 }
 
-100001:100100 early() {
+100001:101000 early() {
 	newSize = asInteger(p1.individualCount * 1.1); //increas popsize every generation by the factor 1.1 with a carrying capacity of "newSize"
 	if (newSize >= 1000) 
 	{
@@ -61,17 +61,10 @@ mateChoice() {
 	p1.setSubpopulationSize(newSize); //Population cannot get bigger than "newSize"
 	
 	heterozygosity = calcHeterozygosity(p1.genomes); //calculate the heterozygosity 
-	cat("Mean heterozygosity = " + heterozygosity + "\n"); //Here i fill in the heterozygosity values over the different generations
+	//cat("Mean heterozygosity = " + heterozygosity + "\n"); //Here i fill in the heterozygosity values over the different generations
 
 }
 
-//100050 late() {
-//// Print mean heterozygosity across the population for each generation
-//	heterozygosity = calcHeterozygosity(p1.genomes);
-//	cat("Mean heterozygosity = " + heterozygosity + "\n"); //Here i fill in the heterozygosity values over the different generations
-////	sim.output(sim.mutationsOfType(m1),"slim_output_" + "reps_" + reps +"_"+ simID  + ".csv");
-//
-//}
 
 
-//Take care - i now changed generation time, as well as the amount of outputs!
+//I now changed log interval and simulation time (before 2 and 100100) and put the cat commands in comments...
