--- a/Read_file_startingrelatedness.slim
+++ b/Read_file_startingrelatedness.slim
@@ -17,37 +17,13 @@ initialize() {
     
     
 }
-//
-//mateChoice() {
-//	females = subpop.individuals[subpop.individuals.sex == "F"]; // Get all females
-//	males = subpop.individuals[subpop.individuals.sex == "M"]; // Get all males
-//
-//	if (individual.sex == "F" & size(males) > 0) {
-//		// Compute relatedness to all males
-//		relatedness = males.relatedness(individual);
-//		
-////		// Print relatedness values for debugging
-////		for (i in seqLen(size(males))) {
-////   	cat("Female " + individual.index + " - Male " + males[i].index + " relatedness: " + relatedness[i] + "\n");
-////	}
-//
-//	bestIndex = which(relatedness == max(relatedness)); // gives out all males which have lowest relatedness value
-//	//cat("Best Index = " + bestIndex +  "\n");
-//	// Randomly shuffle individuals to prevent bias - this line creates a new list where every individual from p1 gets picked only once
-//    shuffledInds = sample(males[bestIndex], size(males[bestIndex]), replace = F);    
-//	bestMate = shuffledInds[0];
-////	cat(">>> Female " + individual.index + " chooses Male " + bestMate.index +  " with relatedness " + relatedness[bestIndex] + "\n");
-//		// Remove selected male from pool
-//		males = males[males != bestMate];
-//		return bestMate;
-//	}
-//
-//	return NULL;
-//}
-
 
 100001 early() {
-	sim.readFromPopulationFile("final_output.trees");
+	//sim.readFromPopulationFile("16_1e-7_output.trees");
+	//sim.readFromPopulationFile("16_1e-6_output.trees");
+	//sim.readFromPopulationFile("16_1e-8_output.trees");
+	sim.readFromPopulationFile("16_1e-9_output.trees");
+
 	// p1 now exists, restored from file
    catn("Restored population size: " + size(p1.individuals));
  	//p1.setSubpopulationSize(1000);
@@ -71,34 +47,4 @@ initialize() {
 	sim.simulationFinished();
 	}
 
-
-//Trying something here to see if mateChoice is working as I want...
-
-
-////uncomment here to have a K
-//100002 : 100030 early() {
-//	newSize = asInteger(p1.individualCount * 1.1); //increas popsize every generation by the factor 1.1
-//	if (newSize >= K_p1) 
-//	{
-//		newSize = K_p1;
-//	}	
-//	p1.setSubpopulationSize(newSize);
-//	cat("Population size =" + size(p1.individuals) +  "\n");
-//
-//
-//}
-
-//100001 : 100030 early() {
-//	// Print mean heterozygosity across the population
-//	heterozygosity = calcHeterozygosity(p1.genomes);
-//	cat("Mean heterozygosity = " + heterozygosity + "\n");
-//	females = p1.individuals[p1.individuals.sex == "F"]; //get all females
-//	males = p1.individuals[p1.individuals.sex == "M"]; // get all males
-//	cat("Number of females: " + size(females) + "\n");
-//	cat("Number of males: " + size(males) + "\n");
-//}
-//
-//100031 late(){
-//	sim.simulationFinished();
-//}
 
